[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/gui/images/ui-elements-v1-1.png" type="Texture" id=1]
[ext_resource path="res://interface/StartMenu.gd" type="Script" id=2]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 202, 40, 10, 32 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 292, 40, 10, 32 )

[node name="StartMenu" type="VBoxContainer"]
margin_left = 64.0
margin_top = 72.0
margin_right = 478.0
margin_bottom = 348.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 32
script = ExtResource( 2 )

[node name="BoxTop" type="MarginContainer" parent="."]
margin_right = 414.0
margin_bottom = 58.0
mouse_filter = 2
size_flags_vertical = 3

[node name="NewGame" type="HBoxContainer" parent="."]
margin_top = 90.0
margin_right = 414.0
margin_bottom = 122.0
mouse_filter = 2

[node name="HSeparator" type="HSeparator" parent="NewGame"]
modulate = Color( 1, 1, 1, 0 )
margin_right = 135.0
margin_bottom = 32.0
size_flags_horizontal = 3
custom_constants/separation = 8

[node name="TRectLeft" type="TextureRect" parent="NewGame"]
margin_left = 139.0
margin_right = 149.0
margin_bottom = 32.0
texture = SubResource( 1 )

[node name="NewGameBtn" type="Button" parent="NewGame"]
unique_name_in_owner = true
margin_left = 153.0
margin_right = 260.0
margin_bottom = 32.0
focus_mode = 0
mouse_default_cursor_shape = 2
size_flags_horizontal = 4
disabled = true
shortcut_in_tooltip = false
text = "NEW GAME"

[node name="TRectRight" type="TextureRect" parent="NewGame"]
margin_left = 264.0
margin_right = 274.0
margin_bottom = 32.0
texture = SubResource( 2 )

[node name="HSeparator2" type="HSeparator" parent="NewGame"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 278.0
margin_right = 414.0
margin_bottom = 32.0
size_flags_horizontal = 3
custom_constants/separation = 8

[node name="LoadGame" type="HBoxContainer" parent="."]
margin_top = 154.0
margin_right = 414.0
margin_bottom = 186.0
mouse_filter = 2

[node name="HSeparator" type="HSeparator" parent="LoadGame"]
modulate = Color( 1, 1, 1, 0 )
margin_right = 130.0
margin_bottom = 32.0
size_flags_horizontal = 3
custom_constants/separation = 8

[node name="TRectLeft" type="TextureRect" parent="LoadGame"]
margin_left = 134.0
margin_right = 144.0
margin_bottom = 32.0
texture = SubResource( 1 )

[node name="LoadGameBtn" type="Button" parent="LoadGame"]
unique_name_in_owner = true
margin_left = 148.0
margin_right = 265.0
margin_bottom = 32.0
focus_mode = 0
mouse_default_cursor_shape = 2
size_flags_horizontal = 4
disabled = true
shortcut_in_tooltip = false
text = "LOAD GAME"

[node name="TRectRight" type="TextureRect" parent="LoadGame"]
margin_left = 269.0
margin_right = 279.0
margin_bottom = 32.0
texture = SubResource( 2 )

[node name="HSeparator2" type="HSeparator" parent="LoadGame"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 283.0
margin_right = 414.0
margin_bottom = 32.0
size_flags_horizontal = 3
custom_constants/separation = 8

[node name="BoxBottom" type="MarginContainer" parent="."]
margin_top = 218.0
margin_right = 414.0
margin_bottom = 276.0
mouse_filter = 2
size_flags_vertical = 3

[connection signal="pressed" from="NewGame/NewGameBtn" to="." method="_on_new_game_pressed"]
[connection signal="pressed" from="LoadGame/LoadGameBtn" to="." method="_on_load_game_pressed"]
